--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p> TEST </p>
+    <div id="quizContainer" class="container">
+        <div class="title">Computer Quiz</div>
+        <div id="question" class="question"></div>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt1"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt2"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt3"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt4"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt5"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt6"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt7"></span></label>
+        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt8"></span></label>
     
 </body>
 </html>
