--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
         <div class="title">Computer Quiz</div>
         <div id="question" class="question"></div>
         <label class="option"><input type="radio" name="option" value="1"/> <span id="opt1"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt2"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt3"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt4"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt5"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt6"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt7"></span></label>
-        <label class="option"><input type="radio" name="option" value="1"/> <span id="opt8"></span></label>
+        <label class="option"><input type="radio" name="option" value="2"/> <span id="opt2"></span></label>
+        <label class="option"><input type="radio" name="option" value="3"/> <span id="opt3"></span></label>
+        <label class="option"><input type="radio" name="option" value="4"/> <span id="opt4"></span></label>
+        <label class="option"><input type="radio" name="option" value="5"/> <span id="opt5"></span></label>
+        <label class="option"><input type="radio" name="option" value="6"/> <span id="opt6"></span></label>
+        <label class="option"><input type="radio" name="option" value="7"/> <span id="opt7"></span></label>
+        <label class="option"><input type="radio" name="option" value="8"/> <span id="opt8"></span></label>
+        <button id="nextButton" class="next-btn" onCLick="loadNextQuestion();">Next Question</button>
+        </div>
+        <div id="result" class="container result" style="display:none;">
+        </div>
+        <script src="question.js"></script>
+        <script src="quiz-script.js"></script>
     
 </body>
 </html>
