--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </div>
         <div id="result" class="container result" style="display:none;">
         </div>
-        <script src="question.js"></script>
-        <script src="quiz-script.js"></script>
-    
+        <script src="/assets/question.js"></script>
+        <script src="/assets/quiz.js"></script>
 </body>
 </html>
