--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="result" class="container result" style="display:none;">
         </div>
-        <script src="/assets/question.js"></script>
-        <script src="/assets/quiz.js"></script>
+        <!-- <script src="/assets/question.js"></script> -->
+        <script src="./assets/quiz.js"></script>
 </body>
 </html>
