--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <label class="option"><input type="radio" name="option" value="3"/> <span id="opt3"></span></label>
         <label class="option"><input type="radio" name="option" value="4"/> <span id="opt4"></span></label>
         <button id="nextButton" class="next-btn" onCLick="loadNextQuestion();">Next Question</button>
+        <button id="startButton" class ="startButton" onCLick="loadQuestion(currentQuestion)();" >Start Quiz</button>
         </div>
         <div id="result" class="container result" style="display:none;">
         </div>
