added quiz end to timer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button id="startButton" class="startButton" onCLick="loadQuestion(currentQuestion)();">Start Quiz</button>
     </div>
     <div id="result" class="container result" style="display:none;">
+        <label>Enter your initals: </label><input type="text" id="initals"><button id="submitInitals">Submit</button>
     </div>
     <!-- <script src="/assets/question.js"></script> -->
     <script src="./assets/quiz.js"></script>
